Fix index out of bound bug

--- a/flow_market/templates/flow_market/flo/flo_order_graph.html
+++ b/flow_market/templates/flow_market/flo/flo_order_graph.html
@@ -278,9 +278,9 @@
                 'message_type': 'add_order',
                 'direction': direction,
                 'max_price': data[MAX_PRICE_INDEX].y,
-                'max_rate': data[MAX_PRICE_INDEX].x,
+                'max_price_rate': data[MAX_PRICE_INDEX].x,
                 'min_price': data[MIN_PRICE_INDEX].y,
-                'min_rate': data[MIN_PRICE_INDEX].x,
+                'min_price_rate': data[MIN_PRICE_INDEX].x,
                 'quantity': quantity
             };
         }
