--- a/flow_market/templates/flow_market/FloMarketPage.html
+++ b/flow_market/templates/flow_market/FloMarketPage.html
@@ -64,6 +64,10 @@ Flo Market
         height: 10px;
         text-align: center;
     }
+
+    #nextButton {
+        display: none;
+    }
 </style>
 
 
@@ -79,6 +83,12 @@ Flo Market
 
 
 This is round {{player.round_number}}
+<div>
+    Time remaining: <span id="timeRemaining"></span>
+</div>
+<div id="nextButton">
+    {{next_button}}
+</div>
 <div class="row1">
     <div class="column">
         <div class="block">
@@ -168,7 +178,13 @@ This is round {{player.round_number}}
     var statusChart = new StatusChart();
 
 
+    var timestamp = 0;
     var updateFloMarketPage = window.setInterval(function () {
+        if (timestamp < 120) {
+            timestamp++;
+        } else {
+            clearInterval(updateFloMarketPage);
+        }
         if (orderGraph.shouldRequestUpdate()) {
             liveSend({
                 'message_type': 'order_graph_update_request'
@@ -204,11 +220,12 @@ This is round {{player.round_number}}
         if (data['contract_table_data']) {
             contractTable.update(data['contract_table_data']);
         }
+        const element = document.getElementById("timeRemaining");
+        element.innerHTML = data['time_remaining'];
+        if (data['time_remaining'] == 0) {
+            document.getElementById("nextButton").style.display = "block";
+        }
     }
 
 </script>
-
-
-
-
 {% endblock %}
