--- a/flow_market/templates/flow_market/FloMarketPage.html
+++ b/flow_market/templates/flow_market/FloMarketPage.html
@@ -176,23 +176,29 @@ This is round {{player.round_number}}
 
     var statusChart = new StatusChart();
 
-    var sendUpdateRequest = true;
-    var updateFloMarketPage = window.setInterval(function () {
+    // Periodically check if the order graph needs to be updated.
+    var updateOrderGraph = window.setInterval(function () {
         if (orderGraph.shouldRequestUpdate()) {
             liveSend({
                 'message_type': 'order_graph_update_request'
             });
         }
-        if (sendUpdateRequest) {
-            liveSend({
-                'message_type': 'update',
-            });
-        }
+    }, 1000);
+
+    // Periodically send the first update request to backend
+    var initialMarketPage = window.setInterval(function () {
+        liveSend({ 'message_type': 'update' });
     }, 1000);
 
     function liveRecv(data) {
-        if (data['message_type'] == 'stop') {
-            sendUpdateRequest = false;
+        clearInterval(initialMarketPage);
+        if (data['message_type'] == 'update') {
+            // Only let id_in_group=1 to send the update request.
+            const sendUpdate = setTimeout(function () {
+                liveSend({
+                    'message_type': 'update'
+                });
+            }, 900);
         }
         if (data['order_book_data']) {
             orderBook.update(data['order_book_data']);
