--- a/flow_market/templates/flow_market/flo/flo_order_graph.html
+++ b/flow_market/templates/flow_market/flo/flo_order_graph.html
@@ -43,7 +43,7 @@
                 x: {
                     title: {
                         display: true,
-                        text: 'Rate'
+                        text: 'Rate (unit/s)'
                     },
                     type: 'linear',
                     min: 0,
