--- a/flow_market/templates/flow_market/CdaMarketPage.html
+++ b/flow_market/templates/flow_market/CdaMarketPage.html
@@ -31,7 +31,6 @@ CDA Market
     }
 
     .block {
-        border: 1px solid black;
         margin-top: 20px;
         margin-bottom: 20px;
         margin-left: auto;
@@ -67,6 +66,16 @@ CDA Market
 
     #nextButton {
         display: none;
+    }
+
+    #buyButton {
+        background-color: rgba(54, 162, 235, 1);
+        float: left;
+    }
+
+    #sellButton {
+        background-color: rgba(255, 99, 132, 1);
+        float: right;
     }
 </style>
 
@@ -126,7 +135,7 @@ This is round {{player.round_number}}
             </div>
         </div>
         <div class="block">
-            <h5>Projected Profit</h5>
+            <h5 style="padding-top: 80px;">Projected Profit</h5>
             <canvas id="profitChart"></canvas>
         </div>
     </div>
@@ -221,12 +230,14 @@ This is round {{player.round_number}}
         if (data['contract_table_data']) {
             contractTable.update(data['contract_table_data']);
         }
+        var timeRemaining = 0
         if (data['time_remaining'] != null) {
-            const element = document.getElementById("timeRemaining");
-            element.innerHTML = data['time_remaining'];
-            if (data['time_remaining'] == 0) {
-                document.getElementById("nextButton").style.display = "block";
-            }
+            timeRemaining = data['time_remaining'];
+        }
+        const element = document.getElementById("timeRemaining");
+        element.innerHTML = timeRemaining + 's';
+        if (timeRemaining == 0) {
+            document.getElementById("nextButton").style.display = "block";
         }
     }
 
