--- a/flow_market/templates/flow_market/IntroPage.html
+++ b/flow_market/templates/flow_market/IntroPage.html
@@ -1,10 +1,6 @@
 {% extends "global/Page.html" %}
 {% load otree %}
-{% block title %}
-Introduction
-{% endblock %}
 {% block content %}
-<!-- Add introduction here -->
-text
+<iframe src="https://docs.google.com/document/d/e/2PACX-1vTrAyNVbqXTmnlLMzBUCKDs13sdb-SJtMqm0_s_R9xV85osU9yYT3bWwslFA7ZTZmElCJy2KVoQGYON/pub?embedded=true" height="1000" width="100%"></iframe>
 {%next_button%}
 {% endblock %}
