--- a/flow_market/templates/flow_market/IntroPage.html
+++ b/flow_market/templates/flow_market/IntroPage.html
@@ -1,6 +1,10 @@
 {% extends "global/Page.html" %}
 {% load otree %}
 {% block content %}
-<iframe src="https://docs.google.com/document/d/e/2PACX-1vTrAyNVbqXTmnlLMzBUCKDs13sdb-SJtMqm0_s_R9xV85osU9yYT3bWwslFA7ZTZmElCJy2KVoQGYON/pub?embedded=true" height="1000" width="100%"></iframe>
-{%next_button%}
+{% if treatment == "flo" %}
+<iframe src="https://docs.google.com/document/d/e/2PACX-1vTrAyNVbqXTmnlLMzBUCKDs13sdb-SJtMqm0_s_R9xV85osU9yYT3bWwslFA7ZTZmElCJy2KVoQGYON/pub?embedded=true" height="1000" width="100%  style="border:none;" ></iframe>
+{% elif treatment == "cda" %}
+<iframe src="https://docs.google.com/document/d/e/2PACX-1vTrAyNVbqXTmnlLMzBUCKDs13sdb-SJtMqm0_s_R9xV85osU9yYT3bWwslFA7ZTZmElCJy2KVoQGYON/pub?embedded=true" height="1000" width="100%  style="border:none;" ></iframe>
+{% endif %}
+{% next_button %}
 {% endblock %}
