--- a/flow_market/templates/flow_market/FloMarketPage.html
+++ b/flow_market/templates/flow_market/FloMarketPage.html
@@ -129,11 +129,11 @@ This is round {{player.round_number}}
             <canvas id="orderGraph"></canvas>
             <div>
                 <div style="float:left">
-                    <input id="buyQuantityInput" type="number" value="10" min="1" max="100" />
+                    <input id="buyQuantityInput" type="number" value="100" min="1" max="1000" />
                     <button type="button" id="buyButton" onclick="FloOrderGraph.buyButtonClick()">Send Buy</button>
                 </div>
                 <div style="float:right">
-                    <input id="sellQuantityInput" type="number" value="10" min="1" max="100" />
+                    <input id="sellQuantityInput" type="number" value="100" min="1" max="1000" />
                     <button type="button" id="sellButton" onclick="FloOrderGraph.sellButtonClick()">Send Sell</button>
                 </div>
             </div>
@@ -234,12 +234,12 @@ This is round {{player.round_number}}
         if (data['contract_table_data']) {
             contractTable.update(data['contract_table_data']);
         }
-        var timeRemaining = 0
+        var timeRemaining = -1;
         if (data['time_remaining'] != null) {
             timeRemaining = data['time_remaining'];
+            const element = document.getElementById("timeRemaining");
+            element.innerHTML = timeRemaining + "s";
         }
-        const element = document.getElementById("timeRemaining");
-        element.innerHTML = timeRemaining + "s";
         if (timeRemaining == 0) {
             document.getElementById("nextButton").style.display = "block";
         }
