--- a/flow_market/templates/flow_market/constants.html
+++ b/flow_market/templates/flow_market/constants.html
@@ -3,7 +3,7 @@
     const RED_TRANSPARENT = 'rgba(255, 99, 132, 0.3)';
     const BLUE = 'rgba(54, 162, 235, 1)';
     const BLUE_TRANSPARENT = 'rgba(54, 162, 235, 0.3)';
-    const GREEN = 'rbga(0, 128, 0, 1)';
+    const GREEN = 'rgba(178, 222, 39, 1)';
     const YMAX = 20;
     const MAX_PRICE_INDEX = 1;
     const MIN_PRICE_INDEX = 2;
