--- a/flow_market/templates/flow_market/FloMarketPage.html
+++ b/flow_market/templates/flow_market/FloMarketPage.html
@@ -210,28 +210,32 @@ This is round {{player.round_number}}
                 });
             }, 900);
         }
-        if (data['order_book_data']) {
+        if (data['order_book_data'] != null) {
             orderBook.update(data['order_book_data']);
+            if (data['order_book_data']['transact_points'].length > 0) {
+                var transact_price = data['order_book_data']['transact_points'][0].y;
+                orderGraph.update_transact(transact_price);
+            }
         }
-        if (data['order_graph_data']) {
+        if (data['order_graph_data'] != null) {
             orderGraph.update(data['order_graph_data']);
         }
-        if (data['inventory_chart_data']) {
+        if (data['inventory_chart_data'] != null) {
             inventoryChart.update(data['inventory_chart_data']);
         }
-        if (data['cash_chart_data']) {
+        if (data['cash_chart_data'] != null) {
             cashChart.update(data['cash_chart_data']);
         }
-        if (data['profit_chart_data']) {
+        if (data['profit_chart_data'] != null) {
             profitChart.update(data['profit_chart_data']);
         }
-        if (data['status_chart_data']) {
+        if (data['status_chart_data'] != null) {
             statusChart.update(data['status_chart_data']);
         }
-        if (data['order_table_data']) {
+        if (data['order_table_data'] != null) {
             orderTable.update(data['order_table_data']);
         }
-        if (data['contract_table_data']) {
+        if (data['contract_table_data'] != null) {
             contractTable.update(data['contract_table_data']);
         }
         var timeRemaining = -1;
