--- a/flow_market/templates/flow_market/common/profit_chart.html
+++ b/flow_market/templates/flow_market/common/profit_chart.html
@@ -49,6 +49,7 @@
                 type: 'line',
                 data: this.data,
                 options: {
+                    animations: null,
                     scales: this.scales
                 }
             }
