--- a/flow_market/templates/flow_market/RoundResultPage.html
+++ b/flow_market/templates/flow_market/RoundResultPage.html
@@ -14,6 +14,7 @@ Your results for this round
 <table>
     <tr>
         <th>Round</th>
+        <th>Practice</th>
         <th>Profit from contract</th>
         <th>Profit from trading</th>
         <th>Total</th>
@@ -21,6 +22,7 @@ Your results for this round
     {{ for d in data }}
     <tr>
         <td>{{d.round_number}}</td>
+        <td>{{d.practice}}</td>
         <td>{{d.profit_from_contract}}</td>
         <td>{{d.profit_from_trading}}</td>
         <td>{{d.profit}}</td>
