--- a/flow_market/templates/flow_market/flo/flo_order_graph.html
+++ b/flow_market/templates/flow_market/flo/flo_order_graph.html
@@ -185,14 +185,18 @@
         }
 
         update_transact(transact_price) {
-            FloOrderGraph.myChart.data.datasets[2].data = [{
-                'x': 0,
-                'y': transact_price
-            },
-            {
-                'x': 20,
-                'y': transact_price
-            }];
+            if (transact_price == 0) {
+                FloOrderGraph.myChart.data.datasets[2].data = [];
+            } else {
+                FloOrderGraph.myChart.data.datasets[2].data = [{
+                    'x': 0,
+                    'y': transact_price
+                },
+                {
+                    'x': 20,
+                    'y': transact_price
+                }];
+            }
             FloOrderGraph.myChart.update();
         }
 
