--- a/flow_market/templates/flow_market/FloMarketPage.html
+++ b/flow_market/templates/flow_market/FloMarketPage.html
@@ -212,10 +212,11 @@ This is round {{player.round_number}}
         }
         if (data['order_book_data'] != null) {
             orderBook.update(data['order_book_data']);
+            var transact_price = 0;
             if (data['order_book_data']['transact_points'].length > 0) {
                 var transact_price = data['order_book_data']['transact_points'][0].y;
-                orderGraph.update_transact(transact_price);
             }
+            orderGraph.update_transact(transact_price);
         }
         if (data['order_graph_data'] != null) {
             orderGraph.update(data['order_graph_data']);
