--- a/flow_market/templates/flow_market/flo/flo_order_graph.html
+++ b/flow_market/templates/flow_market/flo/flo_order_graph.html
@@ -82,10 +82,10 @@
                     showTooltip: true,
                     onDragStart: function (e, datasetIndex, index, value) {
                         if (index == 0 || index == 4) { return false; }
-                        if (datasetIndex == BIDS_DATASETS_INDEX && !FloOrderGraph.bidActive) {
+                        if (datasetIndex == 0 && !FloOrderGraph.bidActive) {
                             return false;
                         }
-                        if (datasetIndex == ASKS_DATASETS_INDEX && !FloOrderGraph.askActive) {
+                        if (datasetIndex == 1 && !FloOrderGraph.askActive) {
                             return false;
                         }
                     },
@@ -96,7 +96,7 @@
                         let asks = FloOrderGraph.myChart.data.datasets[1].data;
                         let asksMax = asks[MAX_PRICE_INDEX];
                         let asksMin = asks[MIN_PRICE_INDEX];
-                        if (datasetIndex == BIDS_DATASETS_INDEX) {
+                        if (datasetIndex == 0) {
                             // Dragging bids
                             if (index == MAX_PRICE_INDEX) {
                                 // Dragging maxPrice
@@ -164,10 +164,10 @@
                             if (element.index != MIN_PRICE_INDEX && element.index != MAX_PRICE_INDEX) {
                                 return;
                             }
-                            if (element.datasetIndex == BIDS_DATASETS_INDEX && !FloOrderGraph.bidActive) {
+                            if (element.datasetIndex == 0 && !FloOrderGraph.bidActive) {
                                 return;
                             }
-                            if (element.datasetIndex == ASKS_DATASETS_INDEX && !FloOrderGraph.askActive) {
+                            if (element.datasetIndex == 1 && !FloOrderGraph.askActive) {
                                 return;
                             }
                             document.querySelector("#orderGraph").style.cursor = "grab";
@@ -272,7 +272,7 @@
 
 
         static buyButtonClick() {
-            let datasets = FloOrderGraph.myChart.data.datasets[BIDS_DATASETS_INDEX];
+            let datasets = FloOrderGraph.myChart.data.datasets[0];
             let button = document.querySelector("#buyButton");
             if (FloOrderGraph.bidActive) {
                 let quantity = document.querySelector("#buyQuantityInput");
@@ -286,7 +286,7 @@
         }
 
         static sellButtonClick() {
-            let datasets = FloOrderGraph.myChart.data.datasets[ASKS_DATASETS_INDEX];
+            let datasets = FloOrderGraph.myChart.data.datasets[1];
             if (FloOrderGraph.askActive) {
                 let quantity = document.querySelector("#sellQuantityInput");
                 liveSend(FloOrderGraph.parseOrder('sell', datasets["data"], parseInt(quantity.value)));
