--- a/flow_market/templates/flow_market/FloMarketPage.html
+++ b/flow_market/templates/flow_market/FloMarketPage.html
@@ -129,11 +129,13 @@ This is round {{player.round_number}}
             <canvas id="orderGraph"></canvas>
             <div>
                 <div style="float:left">
-                    <input id="buyQuantityInput" type="number" value="100" min="1" max="1000" />
+                    <input id="buyQuantityInput" type="number" value="100"
+                        oninput="this.value= Math.max(1, Math.min(1000, parseInt(this.value)))" />
                     <button type="button" id="buyButton" onclick="FloOrderGraph.buyButtonClick()">Send Buy</button>
                 </div>
                 <div style="float:right">
-                    <input id="sellQuantityInput" type="number" value="100" min="1" max="1000" />
+                    <input id="sellQuantityInput" type="number" value="100"
+                        oninput="this.value= Math.max(1, Math.min(1000, parseInt(this.value)))" />
                     <button type="button" id="sellButton" onclick="FloOrderGraph.sellButtonClick()">Send Sell</button>
                 </div>
             </div>
