change 'deadline' to 'expires in'

--- a/flow_market/templates/flow_market/common/contract_table.html
+++ b/flow_market/templates/flow_market/common/contract_table.html
@@ -11,7 +11,7 @@
             var quantity = document.createElement('td');
             quantity.innerHTML = 'Quantity';
             var deadline = document.createElement('td');
-            deadline.innerHTML = 'Deadline';
+            deadline.innerHTML = 'Expires in';
 
             newRow.append(direction, price, quantity, deadline);
             table.appendChild(newRow);
