--- a/flow_market/templates/flow_market/IntroPage.html
+++ b/flow_market/templates/flow_market/IntroPage.html
@@ -7,4 +7,12 @@
 <iframe src="https://docs.google.com/document/d/e/2PACX-1vQzKSPCsaNTWYlorgP1IPGhnCh9nocpBQOFMvoJV2wDnfNJXNeODUyKYwHmpecDrulOC54v7YJi-O2m/pub" height="1000" width="100%  style="border:none;" ></iframe>
 {% endif %}
 {% next_button %}
+<br><br>
+<b>Contáctenos:</b>
+<br>
+<img height="2%" width="2%" src="{% static 'whatsapp.png'%}"/> <a href="https://wa.me/0051985730063" target="_blank">+51 985730063</a>
+<br>
+<img height="2%" width="2%" src="{% static 'gmail.png'%}"/> <a href="https://mail.google.com/mail/?view=cm&fs=1&to=e2lab@up.edu.pe" target="_blank">e2lab@up.edu.pe</a> 
+<br>
+<img height=10% width=20% src="{% static 'logoup.png'%}"/>
 {% endblock %}
