add new video source

--- a/flow_market/templates/flow_market/Instructions_video.html
+++ b/flow_market/templates/flow_market/Instructions_video.html
@@ -9,7 +9,9 @@
 <video width="1000"  controls autoplay>
 <source src="https://zoom.us/rec/play/0IuofkQD9Gx90u6NvNcD-dwvNt-NVeNk3RM96ZsAPJUs7qjWavks0aQLalXGb5HYliCQHLyx6Gb9lcUn.l9uU3FY8CWeF-5EJ?continueMode=true&iet=GT6OaU28524kgH8JXXXR6RiFopWKX634bx4LHbz3Xm4.AG.wyEqr0P1NuOM9x0VO6tsyiPRoPxAzza4fAMM3LywWoXUEeejfNh805fd7lQZQIMRFTRwRXDJ7WuqI0zeDktIXgLufQwmEYHHqeMFK_xdQoLUDqvBaeALEl14ae-4zVWBbIz6jaXVKpQmCg.kJH3_dljanOOPjfg6TDlOQ.WiZhVR-Ph2KXDKuz&_x_zm_rtaid=EUKaOLd3S8-DW695vIHRVg.1666708409465.0747a5b4b25cc73e6f18aa2f56bc9312&_x_zm_rhtaid=743" type="video/mp4">    
 </video>
-
+<p>Si el video no funciona en el browser, entre al siguiente link: 
+</p>
+<a href="https://zoom.us/rec/play/0IuofkQD9Gx90u6NvNcD-dwvNt-NVeNk3RM96ZsAPJUs7qjWavks0aQLalXGb5HYliCQHLyx6Gb9lcUn.l9uU3FY8CWeF-5EJ?continueMode=true&iet=GT6OaU28524kgH8JXXXR6RiFopWKX634bx4LHbz3Xm4.AG.wyEqr0P1NuOM9x0VO6tsyiPRoPxAzza4fAMM3LywWoXUEeejfNh805fd7lQZQIMRFTRwRXDJ7WuqI0zeDktIXgLufQwmEYHHqeMFK_xdQoLUDqvBaeALEl14ae-4zVWBbIz6jaXVKpQmCg.kJH3_dljanOOPjfg6TDlOQ.WiZhVR-Ph2KXDKuz&_x_zm_rtaid=EUKaOLd3S8-DW695vIHRVg.1666708409465.0747a5b4b25cc73e6f18aa2f56bc9312&_x_zm_rhtaid=743">Link del video</a>
 {% elif treatment == "cda" %}
 <iframe src="https://docs.google.com/document/d/e/2PACX-1vQzKSPCsaNTWYlorgP1IPGhnCh9nocpBQOFMvoJV2wDnfNJXNeODUyKYwHmpecDrulOC54v7YJi-O2m/pub" height="1000" width="100%  style="border:none;" ></iframe>
 {% endif %}
