--- a/flow_market/templates/flow_market/Instructions_3.html
+++ b/flow_market/templates/flow_market/Instructions_3.html
@@ -1,9 +1,9 @@
 {% extends "global/Page.html" %}
 {% load otree %}
 {% block content %}
-{% if treatment == "flo" %}
 <h1>Experimento Instrucciones</h1>
 <br><br>
+{% if treatment == "flo" %}
 <h3>Contratos <i>(IMPORTANTE)</i></h3>
 <p>
 ¿Por qué un negociante quisiera transar? ¿Cuánto vale una acción para usted? La respuesta a ambas preguntas es que la computadora le dará un contrato que le permitirá beneficiarse de la negociación. Usted recibirá su contrato cerca del comienzo del período de negociación y este aparecerá en la tabla "Contratos activos" a la izquierda de la pantalla, como se muestra en la Figura 1. 
@@ -29,7 +29,41 @@ El precio de mercado y la tasa a los que se compran o venden acciones dependen d
 
 
 {% elif treatment == "cda" %}
-<iframe src="https://docs.google.com/document/d/e/2PACX-1vQzKSPCsaNTWYlorgP1IPGhnCh9nocpBQOFMvoJV2wDnfNJXNeODUyKYwHmpecDrulOC54v7YJi-O2m/pub" height="1000" width="100%  style="border:none;" ></iframe>
+
+<h3>Contratos <i>(IMPORTANTE)</i></h3>
+<p>
+    ¿Por qué un negociante quisiera transar? ¿Cuánto vale una acción para usted? La respuesta a ambas preguntas es que la computadora le dará un contrato que le permitirá beneficiarse de la negociación. Usted recibirá su contrato cerca del comienzo del período de negociación y este aparecerá en la tabla "Contratos activos" a la izquierda de la pantalla, como se muestra en la Figura 1. 
+</p>
+<p>
+Por ejemplo, su contrato podría ser que la computadora le compre <b>50 acciones a un precio de 14 ECU en el segundo 110</b>. Esto significa que en el segundo 110 del periodo, la computadora le comprará hasta 50 acciones (si dispone de ellas) a un precio de 14 ECU. Su beneficio por cada acción es el precio del contrato (aquí 14) menos el precio que pagó cuando compró esa acción. Por supuesto, para este contrato no valdría la pena comprar acciones a un precio superior a 14 ni comprar más de 50 acciones. 
+</p>
+<p>
+Del mismo modo, su contrato podría ser que la computadora le venda <b>15 acciones a un precio de 13 ECU en el segundo 110</b>. Esto significa que en el segundo 110 del periodo, la computadora le venderá hasta 15 acciones a un precio de 13 ECU por acción. Como se explica en el siguiente párrafo, usted puede vender acciones que no tiene, y así tener una deuda de acciones. Al llegar el momento de la ejecución del contrato, el robot le venderá tantas acciones como usted tenga en deuda, hasta un máximo de 15. Usted obtiene una ganancia vendiendo hasta 15 acciones a precios superiores a 13 ECU por acción. Para este contrato, no valdría la pena vender acciones a un precio inferior a 13 ni vender más de 15 acciones.
+</p>
+<p>
+    Como se mencionó previamente, usted puede comprar más acciones de las que alcanzan con su efectivo y así tener un saldo de efectivo negativo, o vender más acciones de las que posee y por lo tanto tener un inventario negativo (esto se llama shorting). Tener un inventario positivo o negativo cuando finaliza la ronda es penalizado. Sin embargo, puede ser rentable para usted mantener inventarios positivos o negativos en el ínterin. Como se explica a continuación, siempre es rentable vender una acción a un precio más alto de lo que pagó por ella. 
+</p>
+<p>
+    <b>Por favor, trate de entender bien esta sección, puesto que es la más importante para poder obtener ECUs en cada ronda.</b>
+</p>
+<br>
+<h3>Cómo funciona el mercado</h3>
+<p>
+    El precio de mercado al que usted puede comprar o vender acciones depende de las órdenes de compra de todos los participantes. Considere el ejemplo graficado en la Figura 2. Todos los negociantes, excepto el Negociante 1, tiene órdenes de compra o venta activas. En particular, tres negociantes han emitido órdenes de venta a precios límite de 10, 11 y 13, respectivamente (ver los saltos de la línea roja). Estos tres “vendedores” conforman la oferta de mercado (la suma de sus tres órdenes de venta), la cual está trazada de rojo. Otros dos participantes quieren comprar acciones a precios límite de 8 y 5, respectivamente (ver los saltos de la línea azul). Estos dos “compradores” conforman la demanda de mercado (la suma de sus dos órdenes de compra), la cual está trazada de azul.
+</p>
+<p>
+    En este ejemplo, como puede ver, la demanda y la oferta no se cruzan dentro de la cuadrícula, sino en el eje vertical. Ello implica que no hay intercambios en ese momento específico.
+</p>
+<p>
+    Veamos qué pasa si el Negociante 1 decide emitir una orden de compra. Hay dos posibles casos:
+</p>
+<ul>
+    <li>Que su orden de compra tenga un precio límite que está por debajo del menor precio límite de los “vendedores” (por ejemplo, que tenga un precio límite de 9). En este caso, el Negociante 1 solo aumentará la demanda, pero no ocurrirá ninguna transacción.</li>
+    <li>Que su orden de compra tenga un precio límite que está por encima del menor precio límite de los “vendedores” (por ejemplo, que tenga un precio límite de 12). En este caso, el Negociante 1 transará inmediatamente con el “vendedor” de menor precio. Si este no ofrece suficiente volumen (cantidad) para completar la orden del Negociante 1, la demanda restante de este último será comprada al “vendedor” con el siguiente precio más bajo, y así sucesivamente.    </li>
+</ul>
+<img  src="{% static 'flow_market/Figure22.png' %}" width="700" align="center"/>
+
+
 {% endif %}
 {% next_button %}
 <br><br>
